@@ -19,16 +19,13 @@
  * You should have received a copy of the GNU General Public License
  * along with this program. If not, see <https://www.gnu.org/licenses/>.
  */
-package org.isf.menu.data;
+package org.isf.usersettings.data;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
-import org.isf.menu.model.User;
-import org.isf.utils.exception.OHException;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.isf.menu.model.UserSetting;
+import org.isf.usersettings.dto.UserSettingDTO;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -38,46 +35,42 @@ import com.fasterxml.jackson.module.paramnames.ParameterNamesModule;
 
 /**
  * Helper class to generate DTOs and Entities for users endpoints test
- *
  * @author Silevester D.
  * @since 1.15
  */
-public class UserHelper {
+public class UserSettingHelper {
 
-	private static final Logger LOGGER = LoggerFactory.getLogger(UserHelper.class);
+	public static UserSetting generate() {
+		UserSetting userSetting = new UserSetting();
+		userSetting.setUser("contrib");
+		userSetting.setConfigName("test.config");
+		userSetting.setConfigValue("test config value");
 
-	private static final ObjectMapper objectMapper = new ObjectMapper()
-					.registerModule(new ParameterNamesModule())
-					.registerModule(new Jdk8Module())
-					.registerModule(new JavaTimeModule());
-
-	public static User generateUser() throws OHException {
-		User user = new User();
-		user.setUserGroupName(UserGroupHelper.generateUserGroup());
-		user.setUserName("oh user");
-		user.setDesc("oh first user");
-		user.setPasswd("very strong password");
-		return user;
+		return userSetting;
 	}
 
-	public static List<User> generateUsers(int nbUsers) throws OHException {
-		return IntStream.range(0, nbUsers).mapToObj(i -> {
-			try {
-				return generateUser();
-			} catch (OHException e) {
-				LOGGER.error("Error generating user", e);
-				return null;
-			}
-		}).collect(Collectors.toList());
+	public static List<UserSetting> generateMany(int nb) {
+		return IntStream.range(0, nb).mapToObj(i -> {
+			UserSetting userSetting = new UserSetting();
+			userSetting.setUser("contrib");
+			userSetting.setConfigName("test.config " + i);
+			userSetting.setConfigValue("test config " + i + " value");
+
+			return userSetting;
+		}).toList();
 	}
 
-	// TODO: to be moved in a general package?
-	public static <T> String asJsonString(T object) {
+	public static String asJsonString(List<UserSettingDTO> userSettingDTOS) {
 		try {
-			return objectMapper.writeValueAsString(object);
+			return new ObjectMapper()
+							.registerModule(new ParameterNamesModule())
+							.registerModule(new Jdk8Module())
+							.registerModule(new JavaTimeModule())
+							.writeValueAsString(userSettingDTOS);
 		} catch (JsonProcessingException e) {
-			LOGGER.error("Error converting object to JSON", e);
-			return null;
+			e.printStackTrace();
 		}
+
+		return null;
 	}
 }
